package com.qifun.common.rpctest;

enum RpcTestErrorCodes {
	ErrorOne = 1;
	ErrorTwo = 2;
}

message RpcTestException {
	optional RpcTestErrorCodes code = 1;
}
